1.02.21
Removed the floor from outer space.
        Stretched outer-space graphic to fit screen without floor graphic.
Set color of ground to match location (i.e. earth is green, moon is gray).

1.02.20 (11-15-2006)
Removed logo panel for users with screen height<=768 pixels.
Bugfix: after record and playback, the rocket graphic doesn't appear

1.02.19 (11-15-2006)
Bugfix: potential energy (pie chart) is wrong when PE=0 line makes PE negative
Made pie chart piece black for negative potential energy.
Bugfix: reset sometimes causes a crash.

1.02.18 (11-15-2006)
Bugfix: Skater with mass of 1kg gets stuck a lot.

1.02.17 (11-15-2006)
Bugfix: fixed a bug introduced in 1.02.16 that caused thrust to behave incorrectly in free fall and spline mode.

1.02.16 (11-15-2006)
Bugfix: When the interacts with the track, energy is not conserved.
        Now energy is conserved when possible, unless the user has added energy to the system.

1.02.15 (11-15-2006)
Improved spline traversal code:
        more accurate representation of normal force
        small bugfixes & parameter edits    
Bugfix: There is an error with friction on the ground, and falling through the ground.
Bugfix: Deleting a control point during spline traversal crashes the application.
Bugfix: Gravity value doesn't change sometimes after a record/playback.
Bugfix: Identified a problem that caused skater to get stuck on the high part of his spline traversal, or in low gravity.

1.02.14 (11-10-2006)
Bugfix: History buttons are displaying total energy without thermal, and calling it total.
            -Added a thermal energy readout, and fix the total energy value to reflect all energy (not just mechanical energy).
Reduced maximum allowed friction.
Removed keypress focus from friction control (so it won't change while using thrust).
Bugfix: Skater rotates back and forth quickly when at the bottom of a potential well (with friction).
Skater can traverse the track while underground.